@@ -1,5 +1,8 @@
+2016-09-23  Kirit Saelensminde  <kirit@felspar.com>
+ Removed the old `router` function as it's been replaced by `view::execute`.
+
 2016-09-17  Kirit Saelensminde  <kirit@felspar.com>
- * Add a middleware that logs the HTTP request details and some response details.
+ Add a middleware that logs the HTTP request details and some response details.
 
 2016-09-04  Kirit Saelensminde  <kirit@felspar.com>
  `fost.view.pathprefix` can now take an embedded configuration.
